--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="UsmanProfile.jpg" alt="Muhammad Shahid Usman">
+                <img src="UsmanProfile.png" alt="Muhammad Shahid Usman">
             </div>
         </div>
     </section>
